# capstone-project-label

client/: .env  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
model/: .env  .gitignore  Makefile  README.md  docker-compose.yml  docker_build.sh  dockerfile  requirements.txt
operations/: docker-compose.yml
server/: .gitignore  celerybeat-schedule.db  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  makefile  pyproject.toml
server/app/: celery_app.py  config.py  main.py
server/app/agent/tools/: label_emails.py
server/app/api/: deps.py
server/app/api/repository/: __init__.py  user_repository.py
server/app/api/router/: __init__.py  gmail_oauth.py  google_auth.py  imap.py  langchain_test.py  suggest_label.py
server/app/api/utils/: email_cleaner.py  google_auth.py  jwt.py
server/app/enums/: __init__.py  gmail.py
server/app/models/: __init__.py  gmail_account.py  user.py
server/app/repository/: gmail_account_repository.py  user_repository.py
server/app/services/: __init__.py
server/app/services/base/: auth_service.py  gmail_oauth_service.py  imap_service.py  langchain_service.py
server/app/services/default/: auth_service.py  gmail_oauth_service.py  imap_service.py  langchain_service.py
server/app/services/workers/: __init__.py  redis_label_cache.py
server/app/tasks/: token_refresh.py
server/docs/: auth-sequence-diagram.md
server/migrations/models/: 2_20251026021000_None.py  3_20251026033243_update.py  4_20251012003840_None.py
training/: .gitignore  0.26.0  check.py  eval_rouge.py  merge_model.py  (+2 more)
(+123 files in other folders)
